fixed scroll on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -30,8 +30,19 @@ body {
 
 #work-listra {
 	width: 316px;
-	height: 650px;
+	height: 700px;
 
+	background-size: auto 650px;
+	background-image: url('/assets/images/projects/listra/listra-sprite.png');
+	background-repeat: no-repeat;
+	background-position: 0px 0px;
+}
+
+#work-listra-small {
+	width: 158px;
+	height: 350px;
+
+	background-size: auto 325px;
 	background-image: url('/assets/images/projects/listra/listra-sprite.png');
 	background-repeat: no-repeat;
 	background-position: 0px 0px;
@@ -43,5 +54,4 @@ body {
 .header-section,
 .contact-section {
 	overflow: hidden;
-	max-height: 100%;
 }
